--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "require": {
         "php": ">=5.3.0",
         "symfony/symfony": ">=2.1",
-        "tinymce/tinymce": "~4.0"
+        "tinymce/tinymce": "~4.0",
+        "twig/twig":       "~1.12|~2.0"
     },
     "scripts": {
         "post-install-cmd": [
